--- a/science/ckon/Portfile
+++ b/science/ckon/Portfile
@@ -1,30 +1,34 @@
 # -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem          1.0
-name                ckon
-version             dev
-categories          science
-platforms           darwin
-maintainers         tschaume
-description         automatic build tool for ROOT software
-license             MIT
-long_description    ckon is a C++ program/tool which automatically takes care \
-                    of compilation, dictionary generation and linking of \
-                    programs and libraries developed for data analyses within \
-                    the CERN ROOT analysis framework. This includes parsing \
-                    include headers to figure out which libraries the main \
-                    programs need to be linked to. It uses automake/autoconf to \
-                    be platform independent and GNU install compliant. \
-                    In addition, m4 macros are automatically downloaded and \
-                    the according compiler flags included based on a list of boost \
-                    libraries provided in the config file. For the purpose of \
-                    YAML database usage, a m4 macro can be downloaded during \
-                    setup to link against the yaml-cpp library.
-homepage            http://tschaume.github.io/ckon/
+PortSystem             1.0
+name                   ckon
+version                dev
+categories             science
+platforms              darwin
+maintainers            tschaume
+description            automatic build tool for ROOT software
+license                MIT
+long_description       ckon is a C++ program/tool which automatically takes care \
+                       of compilation, dictionary generation and linking of \
+                       programs and libraries developed for data analyses within \
+                       the CERN ROOT analysis framework. This includes parsing \
+                       include headers to figure out which libraries the main \
+                       programs need to be linked to. It uses automake/autoconf to \
+                       be platform independent and GNU install compliant. \
+                       In addition, m4 macros are automatically downloaded and \
+                       the according compiler flags included based on a list of boost \
+                       libraries provided in the config file. For the purpose of \
+                       YAML database usage, a m4 macro can be downloaded during \
+                       setup to link against the yaml-cpp library.
+homepage               http://tschaume.github.io/ckon/
+depends_lib            port:boost port:curl
 
-fetch.type          git
-git.url             git://github.com/tschaume/ckon.git
-git.branch          origin/dev
+fetch.type             git
+git.url                git://github.com/tschaume/ckon.git
+git.branch             origin/dev
+use_autoreconf         yes
+autoreconf.args        -fvi
+configure.args-append  --with-boost --with-boost-filesystem --with-boost-system \
+                       --with-boost-regex --with-boost-program-options
 
-depends_lib         port:boost port:curl
