--- a/science/ckon/Portfile
+++ b/science/ckon/Portfile
@@ -2,11 +2,12 @@
 # $Id$
 
 PortSystem             1.0
-name                   ckon
-version                dev
+PortGroup              github 1.0
+
+github.setup           tschaume ckon 0.6.1 v
 categories             science
 platforms              darwin
-maintainers            tschaume
+maintainers            the-huck.com:patrick
 description            automatic build tool for ROOT software
 license                MIT
 long_description       ckon is a C++ program/tool which automatically takes care \
@@ -22,13 +23,10 @@ long_description       ckon is a C++ program/tool which automatically takes care
                        YAML database usage, a m4 macro can be downloaded during \
                        setup to link against the yaml-cpp library.
 homepage               http://tschaume.github.io/ckon/
+checksums              rmd160  f579cc0cacac0fb5209c429f3b710f89bda3f729 \
+                       sha256  5bd0a03bd2f915c998028f7a46f30e052c13048dffc2c63138a8a5a98410bf99
 depends_lib            port:boost port:curl
-
-fetch.type             git
-git.url                git://github.com/tschaume/ckon.git
-git.branch             origin/dev
 use_autoreconf         yes
 autoreconf.args        -fvi
 configure.args-append  --with-boost --with-boost-filesystem --with-boost-system \
                        --with-boost-regex --with-boost-program-options
-
